2012-02-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ldm.c (grub_util_ldm_embed): Correct error message.

2012-02-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/search_file.c (SEARCH_TARGET): Remove obsolete
	macro.
	* grub-core/commands/search_label.c (SEARCH_TARGET): Likewise.
	* grub-core/commands/search_uuid.c (SEARCH_TARGET): Likewise.

2012-02-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkstandalone.in: Fix help messages. Gettextize.
	* util/grub-install.in: Gettextize.
	* util/grub-mkconfig.in: Likewise.
	* util/grub-mkconfig_lib.in: Replace gettext with echo -n and not echo
	if not available.
	(grub_warn): Gettextize.
	* util/grub-mknetdir.in: Gettextize.
	* util/grub-mkrescue.in: Likewise.
	* util/grub-mkstandalone.in: Likewise.
	* util/grub-reboot.in: Likewise.
	* util/grub-set-default.in: Likewise.
	* util/grub.d/00_header.in: Likewise.
	* util/grub.d/10_hurd.in: Likewise.
	* util/grub.d/10_kfreebsd.in: Likewise.
	* util/grub.d/10_linux.in: Likewise.
	* util/grub.d/10_netbsd.in: Likewise.
	* util/grub.d/10_windows.in: Likewise.
	* util/grub.d/20_linux_xen.in: Likewise.
	* util/grub.d/30_os-prober.in: Likewise.
	* po/POTFILES-shell.in: Regenerate.

2012-02-03  Richard Laager <rlaager@wiktel.com>

	* util/grub-mkimage.c (main): Fix format-security warning.
	* util/grub-mkrelpath.c (main): Likewise.
	* util/grub-probe.c (main): Likewise.

2012-02-03  Richard Laager <rlaager@wiktel.com>

	* util/grub-probe.c (probe): Don't crash on canonicalize_file_name
	failure.
	Put back lost PRINT_DRIVE.

2012-02-03  Richard Laager <rlaager@wiktel.com>

	* util/getroot.c (find_root_devices_from_libzfs): Fix compilation error.
	(grub_guess_root_devices): Replace strlen with sizeof.
	Avoid crash.
	(find_root_devices_from_poolname): Remove unused variable.
	Handle raidzN.

2012-02-03  Vladimir Serbinenko  <phcoder@gmail.com>

	Support install on multi-device filesystems.
